--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport"content="user-scalable=yes, initial-scale=1, maximum-scale=2, minimum-scale=1, width=device-width" />
-    <title>NIAA</title>
+    <title>NIA</title>
     <link rel="shortcut icon" href="assets/img/favicon.ico">
     <link href="assets/css/default.css" rel="stylesheet" />
     <link href="assets/css/outline.css" rel="stylesheet" />
