Update Header & Footer in Korea Pages

--- a/en/video.html
+++ b/en/video.html
@@ -39,15 +39,10 @@
 
                         <!-- Video start -->
                         <em class="font-azo"><span>01</span>Jejak Waktu Kita - The Jorney Of Terminal Modernization</em>
-                        <video class="video_part1" width="920" height="480" loop="true" autoplay="true" muted controls>
-                            <source src="../assets/video/jejak_waktu.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                        </video>
+                        <iframe width="920" height="480" src="https://www.youtube.com/embed/Tb2LdiUj0hQ?si=HbfkiSWvzFq7U5wt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
                         <em class="font-azo"><span>02</span>Opening Ceremony Smart Terminal</em>
-                        <video class="video_part2" width="920" height="480" loop="true" autoplay="true" muted controls>
-                            <source src="../assets/video/opening_ceremony.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                        </video>
+                        <iframe width="920" height="480" src="https://www.youtube.com/embed/AUgskRthB6w?si=npAbkNFojmYBiLHr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         <!-- Video end -->
 
                     </div>
