Update Responsive Homepage

--- a/in/index.html
+++ b/in/index.html
@@ -30,7 +30,7 @@
 
         <div class="tagline">
             <div class="flex-box right">
-                <div class="text-box">
+                <div class="fl text-box">
                     <div class="caption">
                         <h3 class="font-azo">Green with<br /><em>Networks Indonesia Aku</em></h3>
                         <p>
