--- a/in/index.html
+++ b/in/index.html
@@ -2,6 +2,16 @@
 <html>
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z49W0Z4LVG"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-Z49W0Z4LVG');
+    </script>
+
     <meta charset="utf-8">
     <meta name="viewport"content="user-scalable=yes, initial-scale=1, maximum-scale=2, minimum-scale=1, width=device-width" />
     <title>NIA</title>
@@ -476,7 +486,6 @@
     </div>-->
 
     <div data-include="component/footer"></div>
-
 </body>
 
 </html>
