Restructure index.html

--- a/in/index.html
+++ b/in/index.html
@@ -43,35 +43,23 @@
 
         <div class="tagline">
             <div class="flex-box right">
-                <div class="fl text-box">
-                    <div class="caption">
-                        <h3 class="font-azo">Green with<br /><em>Networks Indonesia Aku</em></h3>
-                        <p>
-                            NIA mengupayakan koeksistensi antara manusia dan alam melalui netralitas karbon dan berusaha menjadi pihak yang bertanggung jawab demi masa depan yang inklusif, berkesinambungan, dan tangguh.
-                        </p>
-                    </div>
+                <div class="text-box">
+                    <h3>Green with<br><em>Networks Indonesia Aku</em></h3>
+                    <p> NIA mengupayakan koeksistensi antara manusia dan alam melalui netralitas karbon dan berusaha menjadi pihak yang bertanggung jawab demi masa depan yang inklusif, berkesinambungan, dan tangguh.</p>
                 </div>
                 <img src='../assets/img/main-img-new01.jpg' />
             </div>
             <div class="flex-box left">
                 <img src='../assets/img/main-img-new02.jpg' />
                 <div class="text-box">
-                    <div class="caption">
-                        <h3 class="font-azo">Technology with<br /><em>Networks Indonesia Aku</em></h3>
-                        <p>
-                            Berdasarkan teknologi dan pengetahuan yang dikumpulkan melalui pengalaman bisnis di berbagai bidang, NIA akan menjadi tonggak sejarah bagi perusahaan sistem & solusi yang berpegang pada prinsip, tanpa mengurangi kualitas.
-                        </p>
-                    </div>
+                    <h3>Technology with<br><em>Networks Indonesia Aku</em></h3>
+                    <p>Berdasarkan teknologi dan pengetahuan yang dikumpulkan melalui pengalaman bisnis di berbagai bidang, NIA akan menjadi tonggak sejarah bagi perusahaan sistem & solusi yang berpegang pada prinsip, tanpa mengurangi kualitas.</p>
                 </div>
             </div>
             <div class="flex-box right">
                 <div class="text-box">
-                    <div class="caption">
-                        <h3 class="font-azo">Together with<br /><em>Networks Indonesia Aku</em></h3>
-                        <p>
-                            NIA berusaha untuk mewujudkan budaya bisnis yang sehat dan menyebarkan nilai-nilai simbiosis di bawah moto pertumbuhan bersama yang mengejar nilai-nilai sosial secara bersama-sama, tidak hanya dengan perusahaan mitra.
-                        </p>
-                    </div>
+                    <h3>Together with<br><em>Networks Indonesia Aku</em></h3>
+                    <p>NIA berusaha untuk mewujudkan budaya bisnis yang sehat dan menyebarkan nilai-nilai simbiosis di bawah moto pertumbuhan bersama yang mengejar nilai-nilai sosial secara bersama-sama, tidak hanya dengan perusahaan mitra.</p>
                 </div>
                 <img src='../assets/img/main-img-new03.jpg' />
             </div>
