--- a/en/index.html
+++ b/en/index.html
@@ -11,7 +11,7 @@
 
         gtag('config', 'G-Z49W0Z4LVG');
     </script>
-    
+
     <meta charset="utf-8">
     <meta name="viewport"content="user-scalable=yes, initial-scale=1, maximum-scale=2, minimum-scale=1, width=device-width" />
     <title>NIA</title>
@@ -44,34 +44,22 @@
         <div class="tagline">
             <div class="flex-box right">
                 <div class="text-box">
-                    <div class="caption">
-                        <h3 class="font-azo">Green with<br /><em>Networks Indonesia Aku</em></h3>
-                        <p>
-                            NIA seeks coexistence between humans and nature through carbon neutrality and strives to be a responsible party for an inclusive, sustainable and resilient future.
-                        </p>
-                    </div>
+                    <h3>Green with<br><em>Networks Indonesia Aku</em></h3>
+                    <p>NIA seeks coexistence between humans and nature through carbon neutrality and strives to be a responsible party for an inclusive, sustainable and resilient future.</p>
                 </div>
                 <img src='../assets/img/main-img-new01.jpg' />
             </div>
             <div class="flex-box left">
                 <img src='../assets/img/main-img-new02.jpg' />
                 <div class="text-box">
-                    <div class="caption">
-                        <h3 class="font-azo">Technology with<br /><em>Networks Indonesia Aku</em></h3>
-                        <p>
-                            Based on technology and knowledge gathered through business experience in various fields, NIA will be a milestone for systems & solutions companies that adhere to principles, without compromising on quality.
-                        </p>
-                    </div>
+                    <h3>Technology with<br><em>Networks Indonesia Aku</em></h3>
+                    <p>Based on technology and knowledge gathered through business experience in various fields, NIA will be a milestone for systems & solutions companies that adhere to principles, without compromising on quality.</p>
                 </div>
             </div>
             <div class="flex-box right">
                 <div class="text-box">
-                    <div class="caption">
-                        <h3 class="font-azo">Together with<br /><em>Networks Indonesia Aku</em></h3>
-                        <p>
-                            NIA strives to realize a healthy business culture and spread symbiotic values ​​under the motto of shared growth that pursues social values ​​together, not only with partner companies.
-                        </p>
-                    </div>
+                    <h3>Together with<br><em>Networks Indonesia Aku</em></h3>
+                    <p>NIA strives to realize a healthy business culture and spread symbiotic values nder the motto of shared growth that pursues social values together, not only with partner companies.</p>
                 </div>
                 <img src='../assets/img/main-img-new03.jpg' />
             </div>
