--- a/en/office.html
+++ b/en/office.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="user-scalable=yes, initial-scale=1, maximum-scale=2, minimum-scale=1, width=device-width" />
-<title>NIA</title>
-<link rel="shortcut icon" href="../assets/img/favicon.ico">
-<link href="../assets/css/default.css" rel="stylesheet" />
-<link href="../assets/css/outline.css" rel="stylesheet" />
-<link href="../assets/css/page.css" rel="stylesheet" />
-<link href="../assets/css/owl.carousel.min.css" rel="stylesheet" />
-<link href="../assets/css/owl.theme.default.min.css" rel="stylesheet" />
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-<script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
-<script src="../assets/js/owl.carousel.min.js"></script>
-<script src="../assets/js/common.js"></script>
-<script>
-    $(document).ready(function(){
-        $('.owl-carousel').owlCarousel({
-            items:1,
-            loop:true,
-            autoplay:true,
-            dots:false,
-            nav:true,
-            autoplayTimeout:3000,
-            autoplayHoverPause:true,
-            navText: ["<img src='../assets/img/icon/icon-nav-prev.svg'>","<img src='../assets/img/icon/icon-nav-next.svg'>"]
+    <meta charset="utf-8">
+    <meta name="viewport" content="user-scalable=yes, initial-scale=1, maximum-scale=2, minimum-scale=1, width=device-width" />
+    <title>NIA</title>
+    <link rel="shortcut icon" href="../assets/img/favicon.ico">
+    <link href="../assets/css/default.css" rel="stylesheet" />
+    <link href="../assets/css/outline.css" rel="stylesheet" />
+    <link href="../assets/css/page.css" rel="stylesheet" />
+    <link href="../assets/css/owl.carousel.min.css" rel="stylesheet" />
+    <link href="../assets/css/owl.theme.default.min.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+    <script src="../assets/js/owl.carousel.min.js"></script>
+    <script src="../assets/js/common.js"></script>
+    <script>
+        $(document).ready(function(){
+            $('.owl-carousel').owlCarousel({
+                items:1,
+                loop:true,
+                autoplay:true,
+                dots:false,
+                nav:true,
+                autoplayTimeout:3000,
+                autoplayHoverPause:true,
+                navText: ["<img src='../assets/img/icon/icon-nav-prev.svg'>","<img src='../assets/img/icon/icon-nav-next.svg'>"]
+            });
         });
-    });
-</script>
+    </script>
 </head>
 
 <body>
