Add animation effect in index.html

--- a/in/index.html
+++ b/in/index.html
@@ -16,14 +16,15 @@
     <meta name="viewport"content="user-scalable=yes, initial-scale=1, maximum-scale=2, minimum-scale=1, width=device-width" />
     <title>NIA</title>
     <link rel="shortcut icon" href="../assets/img/favicon.ico">
-    <link href="../assets/css/default.css" rel="stylesheet" />
-    <link href="../assets/css/outline.css" rel="stylesheet" />
-    <link href="../assets/css/page.css" rel="stylesheet" />
-    <link href="../assets/css/owl.carousel.min.css" rel="stylesheet" />
-    <link href="../assets/css/owl.theme.default.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../assets/css/default.css"/>
+    <link rel="stylesheet" href="../assets/css/outline.css"/>
+    <link rel="stylesheet" href="../assets/css/page.css"/>
+    <link rel="stylesheet" href="../assets/css/owl.carousel.min.css"  />
+    <link rel="stylesheet" href="../assets/css/owl.theme.default.min.css"/>
+    <link rel="stylesheet" href="../assets/css/animate.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="../assets/js/owl.carousel.min.js"></script>
     <script src="../assets/js/common.js"></script>
@@ -43,21 +44,21 @@
 
         <div class="tagline">
             <div class="flex-box right">
-                <div class="text-box">
+                <div class="text-box wow fadeIn" data-wow-delay="0.6s">
                     <h3>Green with<br><em>Networks Indonesia Aku</em></h3>
-                    <p> NIA mengupayakan koeksistensi antara manusia dan alam melalui netralitas karbon dan berusaha menjadi pihak yang bertanggung jawab demi masa depan yang inklusif, berkesinambungan, dan tangguh.</p>
+                    <p>NIA mengupayakan koeksistensi antara manusia dan alam melalui netralitas karbon dan berusaha menjadi pihak yang bertanggung jawab demi masa depan yang inklusif, berkesinambungan, dan tangguh.</p>
                 </div>
                 <img src='../assets/img/main-img-new01.jpg' />
             </div>
             <div class="flex-box left">
                 <img src='../assets/img/main-img-new02.jpg' />
-                <div class="text-box">
+                <div class="text-box wow fadeIn" data-wow-delay="0.6s">
                     <h3>Technology with<br><em>Networks Indonesia Aku</em></h3>
                     <p>Berdasarkan teknologi dan pengetahuan yang dikumpulkan melalui pengalaman bisnis di berbagai bidang, NIA akan menjadi tonggak sejarah bagi perusahaan sistem & solusi yang berpegang pada prinsip, tanpa mengurangi kualitas.</p>
                 </div>
             </div>
             <div class="flex-box right">
-                <div class="text-box">
+                <div class="text-box wow fadeIn" data-wow-delay="0.6s">
                     <h3>Together with<br><em>Networks Indonesia Aku</em></h3>
                     <p>NIA berusaha untuk mewujudkan budaya bisnis yang sehat dan menyebarkan nilai-nilai simbiosis di bawah moto pertumbuhan bersama yang mengejar nilai-nilai sosial secara bersama-sama, tidak hanya dengan perusahaan mitra.</p>
                 </div>
@@ -68,6 +69,11 @@
     </div>
 
     <div data-include="component/footer"></div>
+
+    <script src="../assets/js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
 </body>
 
 </html>
