--- a/en/index.html
+++ b/en/index.html
@@ -16,14 +16,15 @@
     <meta name="viewport"content="user-scalable=yes, initial-scale=1, maximum-scale=2, minimum-scale=1, width=device-width" />
     <title>NIA</title>
     <link rel="shortcut icon" href="../assets/img/favicon.ico">
-    <link href="../assets/css/default.css" rel="stylesheet" />
-    <link href="../assets/css/outline.css" rel="stylesheet" />
-    <link href="../assets/css/page.css" rel="stylesheet" />
-    <link href="../assets/css/owl.carousel.min.css" rel="stylesheet" />
-    <link href="../assets/css/owl.theme.default.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../assets/css/default.css"/>
+    <link rel="stylesheet" href="../assets/css/outline.css"/>
+    <link rel="stylesheet" href="../assets/css/page.css"/>
+    <link rel="stylesheet" href="../assets/css/owl.carousel.min.css"  />
+    <link rel="stylesheet" href="../assets/css/owl.theme.default.min.css"/>
+    <link rel="stylesheet" href="../assets/css/animate.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="../assets/js/owl.carousel.min.js"></script>
     <script src="../assets/js/common.js"></script>
@@ -43,7 +44,7 @@
 
         <div class="tagline">
             <div class="flex-box right">
-                <div class="text-box">
+                <div class="text-box wow fadeIn" data-wow-delay="0.6s">
                     <h3>Green with<br><em>Networks Indonesia Aku</em></h3>
                     <p>NIA seeks coexistence between humans and nature through carbon neutrality and strives to be a responsible party for an inclusive, sustainable and resilient future.</p>
                 </div>
@@ -51,13 +52,13 @@
             </div>
             <div class="flex-box left">
                 <img src='../assets/img/main-img-new02.jpg' />
-                <div class="text-box">
+                <div class="text-box wow fadeIn" data-wow-delay="0.6s">
                     <h3>Technology with<br><em>Networks Indonesia Aku</em></h3>
                     <p>Based on technology and knowledge gathered through business experience in various fields, NIA will be a milestone for systems & solutions companies that adhere to principles, without compromising on quality.</p>
                 </div>
             </div>
             <div class="flex-box right">
-                <div class="text-box">
+                <div class="text-box wow fadeIn" data-wow-delay="0.6s">
                     <h3>Together with<br><em>Networks Indonesia Aku</em></h3>
                     <p>NIA strives to realize a healthy business culture and spread symbiotic values nder the motto of shared growth that pursues social values together, not only with partner companies.</p>
                 </div>
@@ -69,6 +70,10 @@
 
     <div data-include="component/footer"></div>
 
+    <script src="../assets/js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
 </body>
 
 </html>
