--- a/in/people.html
+++ b/in/people.html
@@ -53,81 +53,134 @@
 
                         <div class="item fl w33">
                             <div class="imx">
-                                <img src="../assets/img/about-img09.png" />
+                                <figure class="image_person">
+                                    <img src="../assets/img/about-img09.png" alt="Mr. Son"/>
+                                    <figcaption>
+                                        <h2>Mr. Son</h2>
+                                        <h4>President of Indonesia Branch Office</h4>
+                                    </figcaption>
+                                    <a href="#"></a>
+                                </figure>
+                                <!--<img src="../assets/img/about-img09.png" />
                                 <h4>Mr. Son</h4>
-                                <span class="font-azo">President of Indonesia Branch Office</span>
+                                <span class="font-azo">President of Indonesia Branch Office</span>-->
                             </div>
                         </div>
 
                         <div class="item fl w33">
                             <div class="imx">
-                                <img src="../assets/img/about-img11.png" />
-                                <h4>Ms. Kim</h4>
-                                <span class="font-azo">Deputy General Manager</span>
+                                <figure class="image_person">
+                                    <img src="../assets/img/about-img11.png" alt="Ms. Kim"/>
+                                    <figcaption>
+                                        <h2>Ms. Kim</h2>
+                                        <h4>Deputy General Manager</h4>
+                                    </figcaption>
+                                    <a href="#"></a>
+                                </figure>
                             </div>
                         </div>
 
                         <div class="item fl w33">
                             <div class="imx">
-                                <img src="../assets/img/about-img12.png" />
-                                <h4>Galang</h4>
-                                <span class="font-azo">Assistant Manager</span>
+                                <figure class="image_person">
+                                    <img src="../assets/img/about-img12.png" alt="Galang"/>
+                                    <figcaption>
+                                        <h2>Galang</h2>
+                                        <h4>Assistant Manager</h4>
+                                    </figcaption>
+                                    <a href="#"></a>
+                                </figure>
                             </div>
                         </div>
 
                         <div class="item fl w33">
                             <div class="imx">
-                                <img src="../assets/img/about-img23.png" />
-                                <h4>Sidik</h4>
-                                <span class="font-azo">Assistant Manager</span>
+                                <figure class="image_person">
+                                    <img src="../assets/img/about-img23.png" alt="Sidik"/>
+                                    <figcaption>
+                                        <h2>Sidik</h2>
+                                        <h4>Assistant Manager</h4>
+                                    </figcaption>
+                                    <a href="#"></a>
+                                </figure>
                             </div>
                         </div>
 
                         <div class="item fl w33">
                             <div class="imx">
-                                <img src="../assets/img/about-img21.png" />
-                                <h4>Musa</h4>
-                                <span class="font-azo">Developer</span>
+                                <figure class="image_person">
+                                    <img src="../assets/img/about-img21.png" alt="Musa"/>
+                                    <figcaption>
+                                        <h2>Musa</h2>
+                                        <h4>Developer</h4>
+                                    </figcaption>
+                                    <a href="#"></a>
+                                </figure>
                             </div>
                         </div>
 
                         <div class="item fl w33">
                             <div class="imx">
-                                <img src="../assets/img/about-img22.png" />
-                                <h4>Abrar</h4>
-                                <span class="font-azo">Developer</span>
+                                <figure class="image_person">
+                                    <img src="../assets/img/about-img22.png" alt="Abrar"/>
+                                    <figcaption>
+                                        <h2>Abrar</h2>
+                                        <h4>Developer</h4>
+                                    </figcaption>
+                                    <a href="#"></a>
+                                </figure>
                             </div>
                         </div>
 
                         <div class="item fl w33">
                             <div class="imx">
-                                <img src="../assets/img/about-img13.png" />
-                                <h4>Erika</h4>
-                                <span class="font-azo">Accounting Assistant</span>
+                                <figure class="image_person">
+                                    <img src="../assets/img/about-img13.png" alt="Erika"/>
+                                    <figcaption>
+                                        <h2>Erika</h2>
+                                        <h4>Accounting Assistant</h4>
+                                    </figcaption>
+                                    <a href="#"></a>
+                                </figure>
                             </div>
                         </div>
 
                         <div class="item fl w33">
                             <div class="imx">
-                                <img src="../assets/img/about-img14.png" />
-                                <h4>Yudistira</h4>
-                                <span class="font-azo">Designer</span>
+                                <figure class="image_person">
+                                    <img src="../assets/img/about-img14.png" alt="Yudistira"/>
+                                    <figcaption>
+                                        <h2>Yudistira</h2>
+                                        <h4>Designer</h4>
+                                    </figcaption>
+                                    <a href="#"></a>
+                                </figure>
                             </div>
                         </div>
 
                         <div class="item fl w33">
                             <div class="imx">
-                                <img src="../assets/img/about-img15.png" />
-                                <h4>Dwi</h4>
-                                <span class="font-azo">Assistant</span>
+                                <figure class="image_person">
+                                    <img src="../assets/img/about-img15.png" alt="Dwi"/>
+                                    <figcaption>
+                                        <h2>Dwi</h2>
+                                        <h4>Assistant</h4>
+                                    </figcaption>
+                                    <a href="#"></a>
+                                </figure>
                             </div>
                         </div>
 
                         <div class="item fl w33">
                             <div class="imx">
-                                <img src="../assets/img/about-img17.png" />
-                                <h4>Rizki</h4>
-                                <span class="font-azo">Manager</span>
+                                <figure class="image_person">
+                                    <img src="../assets/img/about-img15.png" alt="Rizki"/>
+                                    <figcaption>
+                                        <h2>Rizki</h2>
+                                        <h4>Manager</h4>
+                                    </figcaption>
+                                    <a href="#"></a>
+                                </figure>
                             </div>
                         </div>
 
