Update Korean Menu in Header

--- a/kr/business.html
+++ b/kr/business.html
@@ -48,12 +48,12 @@
                 <div class="row active">
                     <div class="imx">
                         <div class="btn-box clear">
-                            <a class="active">Mobility <br />Technology</a>
-                            <a>Ticketing System <br />and Reservation</a>
-                            <a>Payment <br />System</a>
-                            <a>IT Service <br />Management</a>
-                            <a>Logistics and <br />Delivery System</a>
-                            <a>Live Streaming <br />Platform</a>
+                            <a class="active">모빌리티 테크놀로지</a>
+                            <a>예약 ·예매 시스템</a>
+                            <a>결제 시스템</a>
+                            <a>IT 서비스 운영 및 관리</a>
+                            <a>물류 및 배송 시스템</a>
+                            <a>라이브 스트리밍 플랫폼</a>
                         </div>
                     </div>
                 </div>
@@ -112,12 +112,12 @@
                 <div class="row active">
                     <div class="imx">
                         <div class="btn-box clear">
-                            <a>Mobility <br />Technology</a>
-                            <a class="active">Ticketing System <br />and Reservation</a>
-                            <a>Payment <br />System</a>
-                            <a>IT Service <br />Management</a>
-                            <a>Logistics and <br />Delivery System</a>
-                            <a>Live Streaming <br />Platform</a>
+                            <a>모빌리티 테크놀로지</a>
+                            <a class="active">예약 ·예매 시스템</a>
+                            <a>결제 시스템</a>
+                            <a>IT 서비스 운영 및 관리</a>
+                            <a>물류 및 배송 시스템</a>
+                            <a>라이브 스트리밍 플랫폼</a>
                         </div>
                     </div>
                 </div>
@@ -169,12 +169,12 @@
                 <div class="row active">
                     <div class="imx">
                         <div class="btn-box clear">
-                            <a>Mobility <br />Technology</a>
-                            <a>Ticketing System <br />and Reservation</a>
-                            <a class="active">Payment <br />System</a>
-                            <a>IT Service <br />Management</a>
-                            <a>Logistics and <br />Delivery System</a>
-                            <a>Live Streaming <br />Platform</a>
+                            <a>모빌리티 테크놀로지</a>
+                            <a>예약 ·예매 시스템</a>
+                            <a class="active">결제 시스템</a>
+                            <a>IT 서비스 운영 및 관리</a>
+                            <a>물류 및 배송 시스템</a>
+                            <a>라이브 스트리밍 플랫폼</a>
                         </div>
                     </div>
                 </div>
@@ -253,12 +253,12 @@
                 <div class="row active">
                     <div class="imx">
                         <div class="btn-box clear">
-                            <a>Mobility <br />Technology</a>
-                            <a>Ticketing System <br />and Reservation</a>
-                            <a>Payment <br />System</a>
-                            <a class="active">IT Service <br />Management</a>
-                            <a>Logistics and <br />Delivery System</a>
-                            <a>Live Streaming <br />Platform</a>
+                            <a>모빌리티 테크놀로지</a>
+                            <a>예약 ·예매 시스템</a>
+                            <a>결제 시스템</a>
+                            <a class="active">IT 서비스 운영 및 관리</a>
+                            <a>물류 및 배송 시스템</a>
+                            <a>라이브 스트리밍 플랫폼</a>
                         </div>
                     </div>
                 </div>
@@ -328,12 +328,12 @@
                 <div class="row active">
                     <div class="imx">
                         <div class="btn-box clear">
-                            <a>Mobility <br />Technology</a>
-                            <a>Ticketing System <br />and Reservation</a>
-                            <a>Payment <br />System</a>
-                            <a>IT Service <br />Management</a>
-                            <a class="active">Logistics and <br />Delivery System</a>
-                            <a>Live Streaming <br />Platform</a>
+                            <a>모빌리티 테크놀로지</a>
+                            <a>예약 ·예매 시스템</a>
+                            <a>결제 시스템</a>
+                            <a>IT 서비스 운영 및 관리</a>
+                            <a class="active">물류 및 배송 시스템</a>
+                            <a>라이브 스트리밍 플랫폼</a>
                         </div>
                     </div>
                 </div>
@@ -403,12 +403,12 @@
                 <div class="row active">
                     <div class="imx">
                         <div class="btn-box clear">
-                            <a>Mobility <br />Technology</a>
-                            <a>Ticketing System <br />and Reservation</a>
-                            <a>Payment <br />System</a>
-                            <a>IT Service <br />Management</a>
-                            <a>Logistics and <br />Delivery System</a>
-                            <a class="active">Live Streaming <br />Platform</a>
+                            <a>모빌리티 테크놀로지</a>
+                            <a>예약 ·예매 시스템</a>
+                            <a>결제 시스템</a>
+                            <a>IT 서비스 운영 및 관리</a>
+                            <a>물류 및 배송 시스템</a>
+                            <a class="active">라이브 스트리밍 플랫폼</a>
                         </div>
                     </div>
                 </div>
