--- a/kr/contact.html
+++ b/kr/contact.html
@@ -44,7 +44,7 @@
                             <span class="font-azo">ADDRESS</span>
                             <div>
                                 PT. Networks Indonesia Aku <br /><br />
-                                AIA CENTRAL, Lantai 21<br /><br />
+                                AIA Central 빌딩 21층<br /><br />
                                 Jl. Jenderal Sudirman No.Kav. 48A, Karet Semanggi, <br />
                                 Kecamatan Setiabudi, Jakarta Selatan<br />
                                 Indonesia - 12930
