Update language Korean in page

--- a/kr/ceo.html
+++ b/kr/ceo.html
@@ -28,7 +28,7 @@
         <div class="bg-wrapper font-azo">
             <div class="text-box">
                 <span>The past and the future</span>
-                <h3>CEO Message</h3>
+                <h3>CEO Messsage</h3>
             </div>
         </div>
         <!-- bg-wrapper end -->
@@ -61,7 +61,7 @@
                                     감사합니다.
                                 </span>
                                 
-                                <h4>CEO PT. Networks Indonesia Aku<em></em><br />Son Dong-kwon</h4>
+                                <h4>Networks Indonesia Aku 법인장<em></em><br />손동권</h4>
                             </div>
                         </div>
 
