--- a/kr/notice.html
+++ b/kr/notice.html
@@ -39,10 +39,10 @@
                 <div class="title clear">
                     <div class="fr">
                         <select>
-                            <option>judul + isi</option>
+                            <option>제목+내용</option>
                         </select>
                         <div class="search-box">
-                            <input type="text" placeholder="Masukan pencarian" />
+                            <input type="text" placeholder="검색어 입력" />
                             <a><img src="../assets/img/icon/icon-search.svg" /></a>
                         </div>
                     </div>
@@ -59,9 +59,9 @@
                     <thead>
                         <tr>
                             <th class="font-saira">No.</th>
-                            <th>Judul</th>
-                            <th>Tanggal penulisan</th>
-                            <th>Jumlah pembaca</th>
+                            <th>제목</th>
+                            <th>작성일</th>
+                            <th>조회수</th>
                         </tr>
                     </thead>
 
