--- a/kr/introduction.html
+++ b/kr/introduction.html
@@ -207,35 +207,35 @@
                         <span class="fl w15 year">2023</span>
                         <ul class="fr w80 month">
                             <li>
-                                <span>월</span>
+                                <span>11월</span>
                                 <div>
                                     2023 글로벌코리아 포럼 ODA 우수사례 국무총리 표창 수상
                                 </div>
                             </li>
 
                             <li>
-                                <span>월</span>
+                                <span>10월</span>
                                 <div>
                                     "인도네시아 버스터미널 현대화 시스템 시범운영 및 마스터플랜 수립사업“ 완료 
                                 </div>
                             </li>
 
                             <li>
-                                <span>월</span>
+                                <span>9월</span>
                                 <div>
                                     인도네시아 버스터미널 현대화 사업 오프닝 세레머니 개최
                                 </div>
                             </li>
 
                             <li>
-                                <span>월</span>
+                                <span>7월</span>
                                 <div>
                                     인도네시아 버스터미널 현대화 수립사업 초청 연수(5박6일)<br /><br /> 대한민국 서울, 세종(정부청사), 울산, 전주, 부산(종합버스터미널) 등
                                 </div>
                             </li>
 
                             <li>
-                                <span>월 </span>
+                                <span>4월</span>
                                 <div>
                                     인도네시아 화물 운송 플랫폼 개발 착수<br /><br />
                                     인도네시아 A형 전체 터미널 확대를 위한 현장조사 실시<br /><br />
@@ -243,14 +243,14 @@
                             </li>
 
                             <li>
-                                <span>월</span>
+                                <span>2월</span>
                                 <div>
                                     인도네시아 버스터미널 현대화 시스템 시범운영을 위한 터미널별 교육 실시
                                 </div>
                             </li>
 
                             <li>
-                                <span>월</span>
+                                <span>1월</span>
                                 <div>
                                     "인도네시아 버스터미널 현대화 시스템 시범운영 및 마스터플랜 수립사업" 3차년 사업 착수
                                 </div>
@@ -262,7 +262,7 @@
                         <span class="fl w15 year">2022</span>
                         <ul class="fr w80 month">
                             <li>
-                                <span>월</span>
+                                <span>12월</span>
                                 <div>
                                     "인도네시아 버스터미널 현대화 시스템 시범운영 및 마스터플랜 수립사업" 2차년 사업 완료인도네시아 버스터미널 현대화 시스템 홍보 및 확대 세미나 개최(스마랑 노보텔 호텔)<br /><br />
                                     인도네시아 교통부, 인도네시아 전국 터미널 대표 참석
@@ -270,7 +270,7 @@
                             </li>
 
                             <li>
-                                <span>월</span>
+                                <span>11월</span>
                                 <div>
                                     인도네시아 버스터미널 현대화 수립사업 초청 연수(4박5일) <br /><br />
                                     대한민국 서울, 세종(정부청사), 대전(복합버스터미널) 등
@@ -278,7 +278,7 @@
                             </li>
 
                             <li>
-                                <span>월</span>
+                                <span>1월</span>
                                 <div>
                                     "인도네시아 버스터미널 현대화 시스템 시범운영 및 마스터플랜 수립사업" 2차년 사업 착수
                                 </div>
@@ -290,7 +290,7 @@
                         <span class="fl w15 year">2021</span>
                         <ul class="fr w80 month">
                             <li>
-                                <span>월</span>
+                                <span>12월</span>
                                 <div>
                                     "인도네시아 버스터미널 현대화 시스템 시범운영 및 마스터플랜 수립사업" 1차년 사업 완료<br /><br />
                                     인도네시아 현지 법인 개설(자카르타)
@@ -298,14 +298,14 @@
                             </li>
 
                             <li>
-                                <span>월</span>
+                                <span>8월</span>
                                 <div>
                                     인공지능형(AI) 헬스케어 플랫폼 ‘건강하다’ 개발 착수
                                 </div>
                             </li>
 
                             <li>
-                                <span>월</span>
+                                <span>4월</span>
                                 <div>
                                     "인도네시아 버스터미널 현대화 시스템 시범운영 및 마스터플랜 수립사업" 수주”<br /><br />
                                     (ODA, 국토교통부)<br /><br />
@@ -314,7 +314,7 @@
                             </li>
 
                             <li>
-                                <span>월</span>
+                                <span>2월</span>
                                 <div>
                                     건설분야 운송 플랫폼 ‘올리고’ 출시
                                 </div>
@@ -326,7 +326,7 @@
                         <span class="fl w15 year">2020</span>
                         <ul class="fr w80 month">
                             <li>
-                                <span>월</span>
+                                <span>12월</span>
                                 <div>
                                     “고용노동부 강소기업”, “서울형 강소기업” 선정<br /><br />
                                     해외 건설업 취득(건설엔지니어링 / 정보통신공사업)
@@ -334,7 +334,7 @@
                             </li>
 
                             <li>
-                                <span>월</span>
+                                <span>11월</span>
                                 <div>
                                     건설분야 운송 플랫폼 “올리고” 개발<br /><br />
                                     건설분야 폐기물 차량추적 운송시스템 “24시환경” 출시
@@ -342,7 +342,7 @@
                             </li>
 
                             <li>
-                                <span>월</span>
+                                <span>8월</span>
                                 <div>
                                     제주지사 오픈<br /><br />
                                     인도네시아 버스터미널 100개 터미널 현장검증 및 조사
@@ -350,7 +350,7 @@
                             </li>
 
                             <li>
-                                <span>월</span>
+                                <span>3월</span>
                                 <div>
                                     캄보디아 프놈펜 버스정류장 신설 및 버스터미널, BIS 타당성 조사
                                 </div>
@@ -362,7 +362,7 @@
                         <span class="fl w15 year">2019</span>
                         <ul class="fr w80 month">
                             <li>
-                                <span>월</span>
+                                <span>12월</span>
                                 <div>
                                     KOVA 벤처기업등록(제 20190729-42348호) / Main Biz <br /><br />
                                     인증 획득특허획득 : 자동배차시스템(특허번호 : 제10-2038395호)
@@ -371,7 +371,7 @@
                             </li>
 
                             <li>
-                                <span>월</span>
+                                <span>11월</span>
                                 <div>
                                     위치기반 정보공유 솔루션 특허출원<br /><br />
                                     삼천리 PAY 플랫폼 개발 및 출시(상용화)
@@ -379,7 +379,7 @@
                             </li>
 
                             <li>
-                                <span>월</span>
+                                <span>9월</span>
                                 <div>
                                     몽골 울란바토르 ITS 타당성 조사 검증 및 복합터미널 타당성 조사
                                 </div>
@@ -391,21 +391,21 @@
                         <span class="fl w15 year">2018</span>
                         <ul class="fr w80 month">
                             <li>
-                                <span>월</span>
+                                <span>11월</span>
                                 <div>
                                     기업부설연구소 신설(기술연구소 제2018113469호)
                                 </div>
                             </li>
 
                             <li>
-                                <span>월</span>
+                                <span>5월</span>
                                 <div>
                                     ISO9001 획득 : 18-A-1004 IGC
                                 </div>
                             </li>
 
                             <li>
-                                <span>월</span>
+                                <span>3월</span>
                                 <div>
                                     Cloud 기반 매표발권시스템 설계 및 개발
                                 </div>
@@ -417,7 +417,7 @@
                         <span class="fl w15 year">2017</span>
                         <ul class="fr w80 month">
                             <li>
-                                <span>월</span>
+                                <span>3월</span>
                                 <div>
                                     전국 운송 플랫폼 지사 및 대리점 25개 개설
                                 </div>
@@ -429,14 +429,14 @@
                         <span class="fl w15 year">2016</span>
                         <ul class="fr w80 month">
                             <li>
-                                <span>월</span>
+                                <span>12월</span>
                                 <div>
                                     전국유선업중앙회 유도선 선박 매표발권시스템 개발 및 유지보수
                                 </div>
                             </li>
 
                             <li>
-                                <span>월</span>
+                                <span>8월</span>
                                 <div>
                                     통합 지능형 운송 플랫폼 개발 및 출시(상용화)
                                 </div>
@@ -448,14 +448,14 @@
                         <span class="fl w15 year">2015</span>
                         <ul class="fr w80 month">
                             <li>
-                                <span>월</span>
+                                <span>10월</span>
                                 <div>
                                     KT, KT파워텔 등 Mobile 무선통신중계(TRS) 솔루션 설계 및 개발
                                 </div>
                             </li>
 
                             <li>
-                                <span>월</span>
+                                <span>6월</span>
                                 <div>
                                     운송 통합 콜센터 개설 및 운영
                                 </div>
@@ -467,7 +467,7 @@
                         <span class="fl w15 year">2014</span>
                         <ul class="fr w80 month">
                             <li>
-                                <span>월</span>
+                                <span>10월</span>
                                 <div class="spacetop">
                                     ㈜삼천리네트웍스 설립 (본사, 대한민국 서울)
                                 </div>
