--- a/kr/media.html
+++ b/kr/media.html
@@ -38,10 +38,10 @@
                 <div class="title clear">
                     <div class="fr">
                         <select>
-                            <option>judul + isi</option>
+                            <option>제목+내용</option>
                         </select>
                         <div class="search-box">
-                            <input type="text" placeholder="Masukan pencarian" />
+                            <input type="text" placeholder="검색어 입력" />
                             <a><img src="../assets/img/icon/icon-search.svg" /></a>
                         </div>
                     </div>
