--- a/kr/introduction.html
+++ b/kr/introduction.html
@@ -13,7 +13,7 @@
     <link href="../assets/css/owl.theme.default.min.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="../assets/js/owl.carousel.min.js"></script>
     <script src="../assets/js/common.js"></script>    
@@ -51,11 +51,11 @@
         <div class="about-wrapper">
             <div class="row">
                 <div class="imx">
-                    <h3 class="font-azo"><span>프로필</span></h3>
+                    <h3><span>프로필</span></h3>
                     <img src='../assets/img/logo_svg.svg' />
-                    <P>
+                    <p>
                         <b>Networks Indonesia Aku (NIA)</b>는 ITS (Intelligent Transport System)에 특화된 정보 기술 분야의 서비스, 솔루션 및 혁신적인 디지털 제품을 제공하는 회사입니다. 삼천리 네트웍스의 지사로 설립된 NIA는 삼천리 네트웍스에서 자체적으로 개발한 시스템과 기술을 통해 우수한 디지털 제품을 만들고 새로운 혁신을 창조해 냅니다.<br /><br /> 한국의 선진 기술과 시스템을 접목시켜 모든 혁신에서 일관성 있는 품질의 제품과 서비스를 제공하기 위해 노력하고 있습니다.<br /><br /> NIA는 인도네시아의 교통 시스템 구축 및 발전, 중소기업 지원, 스타트업 기업 육성 등에 적극적으로 참여하고 있으며, 검증된 기술을 바탕으로 체계적인 전략을 통해 우수한 제품을 개발하고 새로운 비전을 제시합니다.
-                    </P>
+                    </p>
                 </div>
             </div>
 
